# data-storage-pipeline-anik

./: .gitignore  ASSIGNMENT_REVIEW.md  CHANGES_SUMMARY.md  DOCKER_DEPLOYMENT_PLAN.md  DOCUMENTATION_INDEX.md  EXECUTION_SUMMARY.md  FASTEST_METHOD.md  FINAL_CLEANUP_SUMMARY.md  FIXES_APPLIED.md  OPTION_A_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  README_MAIN.md  SMART_FEATURES_SUMMARY.md  SMART_INSTALLATION_GUIDE.md  install_spark.sh
2025EM1100026/ecommerce_seller_recommendation/local/: .env_check_results  .gitattributes  .gitignore  Dockerfile  Dockerfile.slim  FIXES_APPLIED_FINAL.md  QUICK_START.md  README.md  README_SMART.md  REVIEWER_GUIDE.md  RUN_ASSIGNMENT.sh  SUBMISSION_CHECKLIST.md  SUBMISSION_GUIDE.md  SUBMISSION_INSTRUCTIONS.txt  check_environment.sh  docker-compose.smart.yml  docker-compose.yml  docker-entrypoint.sh  install_spark_quick.sh  pyproject.toml  requirements.txt  run_complete_demo.sh  run_pipeline_smart.sh  smart_setup.sh  verify_outputs.sh  verify_submission.sh
2025EM1100026/ecommerce_seller_recommendation/local/configs/: ecomm_dirty.yml  ecomm_local.yml  ecomm_prod.yml
2025EM1100026/ecommerce_seller_recommendation/local/raw/: DATA_FILES_NOTE.md
2025EM1100026/ecommerce_seller_recommendation/local/scripts/: consumption_recommendation_spark_submit.sh  etl_company_sales_spark_submit.sh  etl_competitor_sales_spark_submit.sh  etl_seller_catalog_spark_submit.sh  install_spark_local.sh  run_all_pipelines.sh  run_pipeline_direct.sh
2025EM1100026/ecommerce_seller_recommendation/local/src/: consumption_recommendation.py  (+3 more)
(+1 files in other folders)
