[project]
name = "ecommerce-recommendation-system"
version = "1.0.0"
description = "E-commerce Top-Seller Items Recommendation System"
authors = [
    {name = "MSc Data Science & AI Student", email = "student@university.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyspark==3.5.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]